--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
                   <li class=""><a href="index.html">Home</a></li>
                   <li><a href="about.html">About Us</a></li>
                   <li class="menu-item-has-children">
-                    <a href="rooms.html">Accommodation</a>
+                    <a href="#">Accommodation</a>
                     <ul>
                    <li><a href="deluxe-room.html">Deluxe Room</a></li>
                       <li><a href="standard-room.html">Standard Room</a></li>
@@ -56,7 +56,7 @@
               </div>
             </div>
             <div class="cs_main_header_right">
-              <a href="rooms.html" class="cs_btn cs_style_2 cs_medium cs_radius_20 cs_fs_15">
+              <a href="#" class="cs_btn cs_style_2 cs_medium cs_radius_20 cs_fs_15">
                 Book Your Stay Now
               </a>
             </div>
@@ -171,7 +171,7 @@
                 <ul class="cs_menu_widget cs_mp0">
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About Us</a></li>
-                  <li><a href="rooms.html">Booking</a></li>
+                  <li><a href="#">Booking</a></li>
                  <li><a href="gallery.html">Gallery</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
                   <li><a href="blog.html">Blog</a></li>
