--- a/standard-room.html
+++ b/standard-room.html
@@ -41,7 +41,7 @@
                   <li class=""><a href="index.html">Home</a></li>
                   <li><a href="about.html">About Us</a></li>
                   <li class="menu-item-has-children">
-                    <a href="rooms.html">Accommodation</a>
+                    <a href="#">Accommodation</a>
                     <ul>
                    <li><a href="deluxe-room.html">Deluxe Room</a></li>
                       <li><a href="super-deluxe-room.html">Super Deluxe Room</a></li>
@@ -56,7 +56,7 @@
               </div>
             </div>
             <div class="cs_main_header_right">
-              <a href="rooms.html" class="cs_btn cs_style_2 cs_medium cs_radius_20 cs_fs_15">
+              <a href="#" class="cs_btn cs_style_2 cs_medium cs_radius_20 cs_fs_15">
                 Book Your Stay Now
               </a>
             </div>
@@ -74,7 +74,7 @@
             <h1 class="cs_white_color mb-0 cs_fs_67">Standard Room</h1>
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-              <li class="breadcrumb-item"><a href="rooms.html">Rooms</a></li>
+              <li class="breadcrumb-item"><a href="#">Rooms</a></li>
               <li class="breadcrumb-item active">Standard Rooms</li>
             </ol>
           </div>
@@ -92,7 +92,7 @@
           <div class="col-lg-12">
             <div class="cs_room_details">
               <h3 class="cs_fs_38 cs_mb_29 cs_mb_lg_20 text-center">General Description</h3>
-              <p class="cs_mb_49 cs_mb_lg_30">Relax in our cozy, compact room featuring a 140cm bed, satellite TV, coffee and tea set, minibar, desk, air conditioning, and complimentary Wi-Fi. Unwind in the bathroom with a shower, and find bathrobe and slippers for added comfort. Our non-smoking rooms also include SeaPearl's inclusive service, ensuring a delightful stay. Your accommodation price covers breakfast and unrestricted entry to our thermal pools and Wellness & Spa.</p>
+              <p class="cs_mb_49 cs_mb_lg_30">Relax in our cozy, compact room featuring a 140cm bed, satellite TV, coffee and tea set, minibar, desk, air conditioning, and complimentary Wi-Fi. Unwind in the bathroom with a shower, and find bathrobe and slippers for added comfort. Our non-smoking rooms also include Hotel Kailash Park's inclusive service, ensuring a delightful stay. Your accommodation price covers breakfast and unrestricted entry to our thermal pools and Wellness & Spa.</p>
             </div>
           </div>
         </div>
@@ -218,7 +218,7 @@
                 <ul class="cs_menu_widget cs_mp0">
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About Us</a></li>
-                  <li><a href="rooms.html">Booking</a></li>
+                  <li><a href="#">Booking</a></li>
                  <li><a href="gallery.html">Gallery</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
                   <li><a href="blog.html">Blog</a></li>
