--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
           <div class="cs_main_header_in">
             <div class="cs_main_header_left">
               <a class="cs_site_branding" href="index.html">
-                 <img src="assets/images/logo.webp" alt="Logo">
+                 <!--<img src="assets/images/logo.webp" alt="Logo">-->
               </a>
             </div>
             <div class="cs_main_header_center">
@@ -190,7 +190,7 @@
             <div class="cs_footer_grid_item">
               <div class="cs_footer_item">
                 <div class="cs_text_widget">
-                  <img src="assets/images/logo.webp" alt="Logo">
+                  <!--<img src="assets/images/logo.webp" alt="Logo">-->
                   <p>Welcome to Hotel Kailash Park, where coastal luxury meets unparallel  hospitality.</p>
                 </div>
               </div>
