--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="cs_main_header_in">
           <div class="cs_main_header_left">
             <a class="cs_site_branding" href="index.html">
-              <img src="assets/images/logo.webp" alt="Logo">
+              <!--<img src="assets/images/logo.webp" alt="Logo">-->
             </a>
           </div>
           <div class="cs_main_header_center">
@@ -514,7 +514,7 @@
              
                 <div class="cs_quote_icon">
                   <svg width="37" height="31" viewBox="0 0 37 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g clip-path="url(.clip0_495_64)">
+                    <g clip-path="url()">
                       <path
                         d="M9.7683 16.1975C7.56475 16.579 5.54756 16.1866 3.69482 14.9767C0.833489 13.1128 -0.56977 9.61385 0.219563 6.33291C1.03082 2.94296 3.80445 0.46863 7.23586 0.0653247C12.1144 -0.512383 16.4228 3.22637 16.4447 8.10963C16.4667 12.6114 15.8747 17.015 14.1535 21.2116C12.7283 24.6996 10.6673 27.7408 7.58667 30.0189C7.09334 30.3786 6.55616 30.6838 6.01897 30.9781C5.88741 31.0544 5.58045 31.0108 5.49275 30.9018C5.40504 30.7928 5.40504 30.4876 5.50371 30.3677C7.53186 27.6645 8.50756 24.547 9.12149 21.3097C9.42845 19.7183 9.57097 18.1051 9.77927 16.5027C9.77927 16.4046 9.7683 16.3065 9.7683 16.1975ZM7.34549 29.1578C7.41127 29.1033 7.47704 29.0597 7.54282 29.0052C10.459 26.6726 12.3446 23.6423 13.6492 20.2088C14.7565 17.2766 15.3265 14.2355 15.5129 11.129C15.6006 9.74465 15.6883 8.33853 15.5019 6.97601C14.9209 2.81216 10.733 0.0653247 6.58904 0.991837C2.45601 1.91835 -0.054511 6.1585 1.11853 10.1916C2.20386 13.9521 6.02993 16.1975 9.86697 15.3364C10.5247 15.1947 10.6673 15.3037 10.6234 15.9686C10.5796 16.6662 10.5247 17.3529 10.448 18.0397C10.152 20.6775 9.66964 23.2935 8.74875 25.8006C8.33216 26.9342 7.82786 28.0351 7.34549 29.1578Z"
                         fill="currentColor" />
@@ -734,9 +734,8 @@
         <div class="col-lg-6">
           <div class="cs_width_left_50_vw">
             <div class="cs_google_map cs_style_1 cs_type_1">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d96652.27317354927!2d-74.33557928194516!3d40.79756494697628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3a82f1352d0dd%3A0x81d4f72c4435aab5!2sTroy+Meadows+Wetlands!5e0!3m2!1sen!2sbd!4v1563075599994!5m2!1sen!2sbd"
-                allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3627.7328321118825!2d72.8890977!3d19.103570399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c868ce5884dd%3A0xb3f07486d3e75cf7!2sSuper%20Hotel%20O%20Kailash%20Park%20Near%20Sakinaka%20Metro%20Station!5e1!3m2!1sen!2sin!4v1759929454872!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+             
             </div>
           </div>
         </div>
@@ -813,7 +812,7 @@
           <div class="cs_footer_grid_item">
             <div class="cs_footer_item">
               <div class="cs_text_widget">
-                <img src="assets/images/logo.webp" alt="Logo">
+                <!--<img src="assets/images/logo.webp" alt="Logo">-->
                 <p>Welcome to Hotel Kailash Park, where coastal luxury meets unparallel hospitality.</p>
               </div>
             </div>
