--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
           <div class="cs_main_header_in">
             <div class="cs_main_header_left">
               <a class="cs_site_branding" href="index.html">
-                 <img src="assets/images/logo.webp" alt="Logo">
+                 <!--<img src="assets/images/logo.webp" alt="Logo">-->
               </a>
             </div>
             <div class="cs_main_header_center">
@@ -87,7 +87,7 @@
                 <p class="mb-0">Reach out to us via phone, email, or through our convenient online form.  We look forward to hearing from you and helping you plan your  unforgettable experience at Hotel Kailash Park Resort.</p>
               </div>
               <div class="cs_height_37 cs_height_lg_37"></div>
-              <form action="#" class="cs_form cs_style_2">
+              <form action="contact.php" class="cs_form cs_style_2">
                 <label>Full Name*</label>
                 <input type="text" class="cs_form_field_2 cs_radius_20">
                 <div class="cs_height_16 cs_height_lg_16"></div>
@@ -137,7 +137,7 @@
               </div>
               <div class="cs_iconbox_right">
                 <h3 class="cs_fs_28 cs_mb_5">Hotel Kailash Park Address</h3>
-                <p class="mb-0">452 15h Street, Office 741, Ohio, De 47754, USA</p>
+                <p class="mb-0">Kailash Puram, Near Sakinaka Metro Station, Sakinaka, Andheri (E), Mumbai - 400 072.</p>
               </div>
             </div>
           </div>
@@ -159,7 +159,7 @@
               </div>
               <div class="cs_iconbox_right">
                 <h3 class="cs_fs_28 cs_mb_5">For Reservation</h3>
-                <p class="mb-0"><a href="tel:+214544512009">+21 454 451 2009</a></p>
+                <p class="mb-0"><a href="tel:+919892346011">+91 9892346011</a> <br> <a href="tel:+919930598948">+91 9930598948</a></p>
               </div>
             </div>
           </div>
@@ -171,7 +171,7 @@
 
     <!-- Start Google Map Section -->
     <div class="cs_google_map cs_style_1">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d96652.27317354927!2d-74.33557928194516!3d40.79756494697628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3a82f1352d0dd%3A0x81d4f72c4435aab5!2sTroy+Meadows+Wetlands!5e0!3m2!1sen!2sbd!4v1563075599994!5m2!1sen!2sbd" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3627.7328321118825!2d72.8890977!3d19.103570399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c868ce5884dd%3A0xb3f07486d3e75cf7!2sSuper%20Hotel%20O%20Kailash%20Park%20Near%20Sakinaka%20Metro%20Station!5e1!3m2!1sen!2sin!4v1759929454872!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <!-- End Google Map Section -->
     
@@ -203,7 +203,7 @@
             <div class="cs_footer_grid_item">
               <div class="cs_footer_item">
                 <div class="cs_text_widget">
-                  <img src="assets/images/logo.webp" alt="Logo">
+                  <!--<img src="assets/images/logo.webp" alt="Logo">-->
                   <p>Welcome to Hotel Kailash Park, where coastal luxury meets unparallel  hospitality.</p>
                 </div>
               </div>
