--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
           <div class="cs_main_header_in">
             <div class="cs_main_header_left">
               <a class="cs_site_branding" href="index.html">
-                 <!--<img src="assets/images/logo.webp" alt="Logo">-->
+                 <img src="logo-trnas.png" alt="Logo">
               </a>
             </div>
             <div class="cs_main_header_center">
@@ -49,7 +49,7 @@
                     </ul>
                   </li>
                   <li><a href="gallery.html">Gallery</a></li>
-                 <li><a href="blog.html">Blog</a></li>
+                 <!--<li><a href="blog.html">Blog</a></li>-->
                   <li><a href="faq.html">FAQ</a></li>
                   <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -80,8 +80,8 @@
       <div class="container">
         <div class="cs_about cs_style_3">
           <div class="cs_section_heading cs_style_1 text-center">
-            <p class="cs_section_subtitle cs_medium cs_letter_spacing_1 cs_mb_28 cs_mb_lg_15 text-uppercase">ABOUT US</p>
-            <h2 class="cs_fs_67 mb-0 position-relative cs_zindex_2">Curated to match your preferences and desires, our selection includes luxury resorts, exclusive tours, and transfers for an unparalleled  experience</h2>
+            <p class="cs_section_subtitle cs_medium cs_letter_spacing_1 cs_mb_28 cs_mb_lg_15 text-uppercase">Experience Simplicity, Comfort, and Care</p>
+            <h2 class="cs_fs_67 mb-0 position-relative cs_zindex_2 abt-h">Hotel Kailash Park is a 3-star property near Saki Naka Metro Station, offering affordable stays without compromising on cleanliness or comfort. We’re dedicated to providing guests with a peaceful and hassle-free experience — whether you’re here for business or leisure.</h2>
             <img src="assets/img/about_us_1.jpeg" alt="" class="cs_about_img">
             <div class="cs_height_80 cs_height_lg_40"></div>
           </div>
@@ -97,8 +97,7 @@
       <div class="container">
         <div class="cs_section_heading_wrap_1">
           <div class="cs_section_heading cs_style_1">
-            <p class="cs_section_subtitle cs_medium cs_letter_spacing_1 cs_mb_28 cs_mb_lg_15 text-uppercase">CLIENTS FEEDBACK</p>
-            <h2 class="cs_fs_67 mb-0">Rave Reviews from Our <br>Satisfied Guests</h2>
+            <h2 class="cs_fs_67 mb-0">Explore Our Hotel Amenities</h2>
           </div>
           <div class="cs_section_heading_icon cs_accent_color">
             <svg width="187" height="187" viewBox="0 0 187 187" fill="none" xmlns="http://www.w3.org/2000/svg" opacity="0.2">
@@ -187,7 +186,7 @@
             <div class="cs_footer_grid_item">
               <div class="cs_footer_item">
                 <div class="cs_text_widget">
-                  <!--<img src="assets/images/logo.webp" alt="Logo">-->
+                  <img src="logo-trnas.png" alt="Logo">
                   <p>Welcome to Hotel Kailash Park, where coastal luxury meets unparallel  hospitality.</p>
                 </div>
               </div>
@@ -213,7 +212,7 @@
                   <li><a href="#">Booking</a></li>
                  <li><a href="gallery.html">Gallery</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
-                  <li><a href="blog.html">Blog</a></li>
+                  <!--<li><a href="blog.html">Blog</a></li>-->
                 </ul>
               </div>
             </div>
