--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
           <div class="cs_main_header_in">
             <div class="cs_main_header_left">
               <a class="cs_site_branding" href="index.html">
-                 <!--<img src="assets/images/logo.webp" alt="Logo">-->
+                 <img src="logo-trnas.png" alt="Logo">
               </a>
             </div>
             <div class="cs_main_header_center">
@@ -49,7 +49,7 @@
                     </ul>
                   </li>
                   <li><a href="gallery.html">Gallery</a></li>
-                 <li><a href="blog.html">Blog</a></li>
+                 <!--<li><a href="blog.html">Blog</a></li>-->
                   <li><a href="faq.html">FAQ</a></li>
                   <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -84,7 +84,6 @@
               <div class="cs_section_heading cs_style_1">
                 <p class="cs_section_subtitle cs_medium cs_letter_spacing_1 cs_mb_28 cs_mb_lg_15 text-uppercase">GETTING TOUCH</p>
                 <h2 class="cs_fs_67 cs_mb_18">Contact Hotel Kailash Park Resort Today</h2>
-                <p class="mb-0">Reach out to us via phone, email, or through our convenient online form.  We look forward to hearing from you and helping you plan your  unforgettable experience at Hotel Kailash Park Resort.</p>
               </div>
               <div class="cs_height_37 cs_height_lg_37"></div>
               <form action="contact.php" class="cs_form cs_style_2">
@@ -136,7 +135,7 @@
                 <img src="assets/img/icons/contact_icon_1.svg" alt="Icon">
               </div>
               <div class="cs_iconbox_right">
-                <h3 class="cs_fs_28 cs_mb_5">Hotel Kailash Park Address</h3>
+                <h3 class="cs_fs_28 cs_mb_5"> Address</h3>
                 <p class="mb-0">Kailash Puram, Near Sakinaka Metro Station, Sakinaka, Andheri (E), Mumbai - 400 072.</p>
               </div>
             </div>
@@ -203,7 +202,7 @@
             <div class="cs_footer_grid_item">
               <div class="cs_footer_item">
                 <div class="cs_text_widget">
-                  <!--<img src="assets/images/logo.webp" alt="Logo">-->
+                  <img src="logo-trnas.png" alt="Logo">
                   <p>Welcome to Hotel Kailash Park, where coastal luxury meets unparallel  hospitality.</p>
                 </div>
               </div>
@@ -229,7 +228,7 @@
                   <li><a href="#">Booking</a></li>
                  <li><a href="gallery.html">Gallery</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
-                  <li><a href="blog.html">Blog</a></li>
+                  <!--<li><a href="blog.html">Blog</a></li>-->
                 </ul>
               </div>
             </div>
