--- a/faq.html
+++ b/faq.html
@@ -33,7 +33,7 @@
           <div class="cs_main_header_in">
             <div class="cs_main_header_left">
               <a class="cs_site_branding" href="index.html">
-                 <!--<img src="assets/images/logo.webp" alt="Logo">-->
+                 <img src="logo-trnas.png" alt="Logo">
               </a>
             </div>
             <div class="cs_main_header_center">
@@ -49,7 +49,7 @@
                     </ul>
                   </li>
                   <li><a href="gallery.html">Gallery</a></li>
-                 <li><a href="blog.html">Blog</a></li>
+                 <!--<li><a href="blog.html">Blog</a></li>-->
                   <li><a href="faq.html">FAQ</a></li>
                   <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -75,86 +75,95 @@
     <!-- End Page Heading Section -->
 
     <!-- Start FAQ Section -->
-    <section>
-      <div class="cs_height_150 cs_height_lg_80"></div>
-      <div class="container">
-        <div class="row align-items-center cs_gap_y_30">
-          <div class="col-lg-6">
-            <div class="cs_pr_110">
-              <img src="assets/img/faq_img.jpeg" alt="FAQ">
-            </div>
+      <section>
+    <div class="cs_height_141 cs_height_lg_75"></div>
+    <div class="container">
+      <div class="cs_section_heading cs_style_1 text-center">
+        <p class="cs_section_subtitle cs_medium cs_letter_spacing_1 cs_mb_28 cs_mb_lg_15 text-uppercase">FAQ’S</p>
+        <h2 class="cs_fs_67 mb-0 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Explore Our Frequently
+          <br>Asked Questions
+        </h2>
+      </div>
+      <div class="cs_height_80 cs_height_lg_50"></div>
+      <div class="row align-items-center cs_gap_y_30 cs_mobile_reverse">
+        <div class="col-lg-6">
+          <div class="cs_accordians cs_style_1">
+            <div class="cs_accordian active">
+              <div class="cs_accordian_head">
+                <h2 class="cs_accordian_title cs_fs_28 mb-0">Where is Hotel Kailash Park located?</h2>
+                <span class="cs_accordian_toggle"></span>
+              </div>
+              <div class="cs_accordian_body">
+                <p>We are conveniently located near Saki Naka Metro Station, just a 2-minute walk away.</p>
+              </div>
+            </div><!-- .cs_accordian -->
+            <div class="cs_accordian">
+              <div class="cs_accordian_head">
+                <h2 class="cs_accordian_title cs_fs_28 mb-0">Is the hotel suitable for business travelers?</h2>
+                <span class="cs_accordian_toggle"></span>
+              </div>
+              <div class="cs_accordian_body">
+                <p>Yes, we’re located close to major business hubs and offer a peaceful stay ideal for work trips.</p>
+              </div>
+            </div><!-- .cs_accordian -->
+            <div class="cs_accordian">
+              <div class="cs_accordian_head">
+                <h2 class="cs_accordian_title cs_fs_28 mb-0">Do you have a restaurant?</h2>
+                <span class="cs_accordian_toggle"></span>
+              </div>
+              <div class="cs_accordian_body">
+                <p>Currently, we don’t have an in-house restaurant, but there are plenty of dining options nearby.</p>
+              </div>
+            </div><!-- .cs_accordian -->
+            <div class="cs_accordian">
+              <div class="cs_accordian_head">
+                <h2 class="cs_accordian_title cs_fs_28 mb-0">Is Wi-Fi available?</h2>
+                <span class="cs_accordian_toggle"></span>
+              </div>
+              <div class="cs_accordian_body">
+                <p> Yes, we offer free Wi-Fi to all our guests.</p>
+              </div>
+            </div><!-- .cs_accordian -->
+            <div class="cs_accordian">
+              <div class="cs_accordian_head">
+                <h2 class="cs_accordian_title cs_fs_28 mb-0">What are the check-in and check-out times?</h2>
+                <span class="cs_accordian_toggle"></span>
+              </div>
+              <div class="cs_accordian_body">
+                <p>Check-in is from 12:00 PM, and check-out is at 11:00 AM.</p>
+              </div>
+            </div><!-- .cs_accordian -->
+            <div class="cs_accordian">
+              <div class="cs_accordian_head">
+                <h2 class="cs_accordian_title cs_fs_28 mb-0">Do you allow early check-in or late check-out?</h2>
+                <span class="cs_accordian_toggle"></span>
+              </div>
+              <div class="cs_accordian_body">
+                <p>Early check-in or late check-out can be arranged based on room availability. Please check with our front desk.</p>
+              </div>
+            </div><!-- .cs_accordian -->
+            <div class="cs_accordian">
+              <div class="cs_accordian_head">
+                <h2 class="cs_accordian_title cs_fs_28 mb-0">Is the hotel family-friendly?</h2>
+                <span class="cs_accordian_toggle"></span>
+              </div>
+              <div class="cs_accordian_body">
+                <p>Absolutely! Our comfortable and safe environment is suitable for solo travelers, couples, and families alike.</p>
+              </div>
+            </div><!-- .cs_accordian -->
           </div>
-          <div class="col-lg-6">
-            <div class="cs_accordians cs_style_1">
-              <div class="cs_accordian active">
-                <div class="cs_accordian_head">
-                  <h2 class="cs_accordian_title cs_fs_28 mb-0">What are the check-in and check-out times at Hotel Kailash Park?</h2>
-                  <span class="cs_accordian_toggle"></span>
-                </div>
-                <div class="cs_accordian_body">
-                  <p>Check-in time is at 3:00 PM, and check-out is at 11:00 AM.</p>
-                </div>
-              </div><!-- .cs_accordian -->
-              <div class="cs_accordian">
-                <div class="cs_accordian_head">
-                  <h2 class="cs_accordian_title cs_fs_28 mb-0">Is parking available, and is there a fee?</h2>
-                  <span class="cs_accordian_toggle"></span>
-                </div>
-                <div class="cs_accordian_body">
-                  <p>Check-in time is at 3:00 PM, and check-out is at 11:00 AM.</p>
-                </div>
-              </div><!-- .cs_accordian -->
-              <div class="cs_accordian">
-                <div class="cs_accordian_head">
-                  <h2 class="cs_accordian_title cs_fs_28 mb-0">Are pets allowed at Hotel Kailash Park?</h2>
-                  <span class="cs_accordian_toggle"></span>
-                </div>
-                <div class="cs_accordian_body">
-                  <p>Check-in time is at 3:00 PM, and check-out is at 11:00 AM.</p>
-                </div>
-              </div><!-- .cs_accordian -->
-              <div class="cs_accordian">
-                <div class="cs_accordian_head">
-                  <h2 class="cs_accordian_title cs_fs_28 mb-0">Is there a dress code for the restaurant?</h2>
-                  <span class="cs_accordian_toggle"></span>
-                </div>
-                <div class="cs_accordian_body">
-                  <p>Check-in time is at 3:00 PM, and check-out is at 11:00 AM.</p>
-                </div>
-              </div><!-- .cs_accordian -->
-              <div class="cs_accordian">
-                <div class="cs_accordian_head">
-                  <h2 class="cs_accordian_title cs_fs_28 mb-0">Is Wi-Fi provided, and is it complimentary?</h2>
-                  <span class="cs_accordian_toggle"></span>
-                </div>
-                <div class="cs_accordian_body">
-                  <p>Check-in time is at 3:00 PM, and check-out is at 11:00 AM.</p>
-                </div>
-              </div><!-- .cs_accordian -->
-              <div class="cs_accordian">
-                <div class="cs_accordian_head">
-                  <h2 class="cs_accordian_title cs_fs_28 mb-0">Do you have facilities for business meetings or events?</h2>
-                  <span class="cs_accordian_toggle"></span>
-                </div>
-                <div class="cs_accordian_body">
-                  <p>Check-in time is at 3:00 PM, and check-out is at 11:00 AM.</p>
-                </div>
-              </div><!-- .cs_accordian -->
-              <div class="cs_accordian">
-                <div class="cs_accordian_head">
-                  <h2 class="cs_accordian_title cs_fs_28 mb-0">Is direct beach access available from the hotel?</h2>
-                  <span class="cs_accordian_toggle"></span>
-                </div>
-                <div class="cs_accordian_body">
-                  <p>Check-in time is at 3:00 PM, and check-out is at 11:00 AM.</p>
-                </div>
-              </div><!-- .cs_accordian -->
+        </div>
+        <div class="col-lg-6">
+          <div class="cs_pl_110">
+            <div class="cs_width_right_50_vw-110">
+              <div class="faq_thumb_1 cs_bg_filed" data-src="assets/img/faq_img_1.jpeg"></div>
             </div>
           </div>
         </div>
       </div>
-      <div class="cs_height_150 cs_height_lg_70"></div>
-    </section>
+    </div>
+    <div class="cs_height_150 cs_height_lg_60"></div>
+  </section>
     <!-- End FAQ Section -->
 
 
@@ -186,7 +195,7 @@
             <div class="cs_footer_grid_item">
               <div class="cs_footer_item">
                 <div class="cs_text_widget">
-                  <!--<img src="assets/images/logo.webp" alt="Logo">-->
+                  <img src="logo-trnas.png" alt="Logo">
                   <p>Welcome to Hotel Kailash Park, where coastal luxury meets unparallel  hospitality.</p>
                 </div>
               </div>
@@ -212,7 +221,7 @@
                   <li><a href="#">Booking</a></li>
                  <li><a href="gallery.html">Gallery</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
-                  <li><a href="blog.html">Blog</a></li>
+                  <!--<li><a href="blog.html">Blog</a></li>-->
                 </ul>
               </div>
             </div>
