--- a/standard-room.html
+++ b/standard-room.html
@@ -27,43 +27,42 @@
   <body>
    
     <header class="cs_site_header cs_style_1 cs_primary_color cs_sticky_header">
-      <div class="cs_main_header">
-        <div class="container-fluid">
-          <div class="cs_main_header_in">
-            <div class="cs_main_header_left">
-              <a class="cs_site_branding" href="index.html">
-                 <!--<img src="assets/images/logo.webp" alt="Logo">-->
-              </a>
+    <div class="cs_main_header">
+      <div class="container-fluid">
+        <div class="cs_main_header_in">
+          <div class="cs_main_header_left">
+            <a class="cs_site_branding" href="index.html">
+              <img src="logo-trnas.png" alt="Logo">
+            </a>
+          </div>
+          <div class="cs_main_header_center">
+            <div class="cs_nav cs_fs_13 cs_semibold">
+              <ul class="cs_nav_list">
+                <li class=""><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li class="menu-item-has-children">
+                  <a href="#">Accommodation</a>
+                  <ul>
+                    <li><a href="deluxe-room.html">Deluxe Room</a></li>
+                    <li><a href="standard-room.html">Standard Room</a></li>
+                  </ul>
+                </li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <!--<li><a href="blog.html">Blog</a></li>-->
+                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
             </div>
-            <div class="cs_main_header_center">
-              <div class="cs_nav cs_fs_13 cs_semibold">
-                <ul class="cs_nav_list">
-                  <li class=""><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About Us</a></li>
-                  <li class="menu-item-has-children">
-                    <a href="#">Accommodation</a>
-                    <ul>
-                   <li><a href="deluxe-room.html">Deluxe Room</a></li>
-                      <li><a href="super-deluxe-room.html">Super Deluxe Room</a></li>
-                      <li><a href="suite.html">Suite</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="gallery.html">Gallery</a></li>
-                 <li><a href="blog.html">Blog</a></li>
-                  <li><a href="faq.html">FAQ</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="cs_main_header_right">
-              <a href="#" class="cs_btn cs_style_2 cs_medium cs_radius_20 cs_fs_15">
-                Book Your Stay Now
-              </a>
-            </div>
+          </div>
+          <div class="cs_main_header_right">
+            <a href="#" class="cs_btn cs_style_2 cs_medium cs_radius_20 cs_fs_15">
+              Book Your Stay Now
+            </a>
           </div>
         </div>
       </div>
-    </header>
+    </div>
+  </header>
     <!-- End Header Section -->
 
     <!-- Start Page Heading Section -->
@@ -92,7 +91,11 @@
           <div class="col-lg-12">
             <div class="cs_room_details">
               <h3 class="cs_fs_38 cs_mb_29 cs_mb_lg_20 text-center">General Description</h3>
-              <p class="cs_mb_49 cs_mb_lg_30">Relax in our cozy, compact room featuring a 140cm bed, satellite TV, coffee and tea set, minibar, desk, air conditioning, and complimentary Wi-Fi. Unwind in the bathroom with a shower, and find bathrobe and slippers for added comfort. Our non-smoking rooms also include Hotel Kailash Park's inclusive service, ensuring a delightful stay. Your accommodation price covers breakfast and unrestricted entry to our thermal pools and Wellness & Spa.</p>
+              <p class="cs_mb_49 cs_mb_lg_30">Compact, functional, and budget-friendly — our Standard Rooms are designed for guests
+                who value simplicity and convenience.
+                Perfect for solo travelers or short stays, these rooms provide all the basics — a comfortable bed, private bathroom,
+                and a quiet space to relax.</p>
+              <p class="cs_mb_49 cs_mb_lg_30">It’s the perfect choice if you’re looking for a clean, safe, and affordable stay close to Saki Naka Metro.</p>
             </div>
           </div>
         </div>
@@ -195,7 +198,7 @@
             <div class="cs_footer_grid_item">
               <div class="cs_footer_item">
                 <div class="cs_text_widget">
-                  <!--<img src="assets/images/logo.webp" alt="Logo">-->
+                  <img src="logo-trnas.png" alt="Logo">
                   <p>Welcome to Hotel Kailash Park, where coastal luxury meets unparallel  hospitality.</p>
                 </div>
               </div>
@@ -221,7 +224,7 @@
                   <li><a href="#">Booking</a></li>
                  <li><a href="gallery.html">Gallery</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
-                  <li><a href="blog.html">Blog</a></li>
+                  <!--<li><a href="blog.html">Blog</a></li>-->
                 </ul>
               </div>
             </div>
